changed incentive draws (bugfix)

--- a/risk_sensitive_foraging/locale/eng/LC_MESSAGES/django.po
+++ b/risk_sensitive_foraging/locale/eng/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-03 00:48+0100\n"
-"PO-Revision-Date: 2018-12-03 12:02+0100\n"
+"PO-Revision-Date: 2018-12-03 14:41+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -510,10 +510,9 @@ msgstr ""
 "bonus. If you did <u>not</u> reach the point goal in a round, your bonus "
 "equals zero.</p>\n"
 "<p>\n"
-"Your bonus will be determined from <b>two rounds</b> that will be randomly "
+"Your bonus will be determined from <b>one round</b> that will be randomly "
 "selected from all rounds. Each of the subsequent rounds are equally likely "
-"to be one of the two bonus rounds. Therefore, please pay attention to all "
-"rounds.</p>"
+"to bea bonus round. Therefore, please pay attention to all rounds.</p>"
 
 #: .\templates\risk_sensitive_foraging\Incentives.html:22
 #, python-format
