reduced training from 10 to 7 reps

--- a/risk_sensitive_foraging/locale/eng/LC_MESSAGES/django.po
+++ b/risk_sensitive_foraging/locale/eng/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-03 00:48+0100\n"
-"PO-Revision-Date: 2018-12-03 15:44+0100\n"
+"PO-Revision-Date: 2018-12-03 17:23+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -341,9 +341,8 @@ msgstr ""
 "There are multiple <b>rounds</b>. One round consists of five decisions. New "
 "rounds involve a new point goal, and new options. Note that points that you "
 "collected in the last round do not affect the next round. The rounds are "
-"independetn of each other. In total there are <b>91 rounds with 5 choices</"
-"b> followed by another <b>46 choices</b>. This should take around 30-40 "
-"minutes."
+"independent of each other. There will be <b>56 rounds with 5 choices</b> "
+"followed by another <b>46 choices</b>. This should take around 30-40 minutes."
 
 #: .\templates\risk_sensitive_foraging\Coverstory_check.html:7
 msgid "Verständnisfragen"
@@ -630,9 +629,9 @@ msgid ""
 "Bonus. Klicken Sie auf \"weiter\". Wählen Sie dann eine Option durch "
 "Anklicken aus. </p>"
 msgstr ""
-"<p>The \"collect points\" task starts after this screen. The very first "
-"round serves as familiarization. The first round will not matter for you "
-"bonus. All subsequent rounds will matter for the bonus.<p>"
+"<p>The \"collect points\" task starts on the next page. The very first round "
+"is for you to try out the task and get familiar with it. This very first "
+"round will not matter for your bonus. Try out the task!<p>"
 
 #: .\templates\risk_sensitive_foraging\InstructionTrainingPhase.html:11
 msgid ""
